Lesson about selectors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
         <h3>I'm in the AppComponent!</h3>
         <hr>
         <app-servers></app-servers>
+        <!-- <div app-server></div> -->         <!-- app-server is selected here as an attribute -->
+        <!-- <div class="app-servers"></div> -->      <!-- app-server is selected here as a class -->
     </div>
 </div>
