Restarting from the ressource file sent on Udemy.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <div class="container">
     <div class="row">
-        <h3>I'm in the AppComponent!</h3>
-        <hr>
-        <app-servers></app-servers>
-        <!-- <div app-server></div> -->         <!-- app-server is selected here as an attribute -->
-        <!-- <div class="app-servers"></div> -->      <!-- app-server is selected here as a class -->
+      <div class="col-xs-12">
+        <ol>
+          <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
+          <li>Output them beneath each other in the AppComponent</li>
+          <li>Output a warning or success message in the Components</li>
+          <li>Style the Components appropriately (maybe some red/ green text?)</li>
+        </ol>
+        <p>Use external or internal templates and styles!</p>
+        <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
+      </div>
     </div>
-</div>
+  </div>
+  
+  
