--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,9 +1,13 @@
 <label>Server Name</label>
+<!-- <input
+    type="text"
+    class="form-control"
+    (input)="onUpdateServerName($event)"> -->
 <input
     type="text"
     class="form-control"
-    (input)="onUpdateServerName($event)">
-<p>{{ serverName }}</p>
+    [(ngModel)]="serverName">
+<!-- <p>{{ serverName }}</p> -->
 <button 
     class="btn btn-primary"
     [disabled]="!allowNewServer"
